# life_assist

./: .pre-commit-config.yaml  README.md  pyproject.toml
base/: asgi.py  settings.py  urls.py  wsgi.py
car_maintenance/: admin.py  apps.py  dash.py  forms.py  models.py  urls.py  views.py
car_maintenance/migrations/: 0001_initial.py  0002_alter_car_year_alter_carmaintenance_date_and_more.py  0003_alter_carmaintenance_date.py  0004_alter_carmaintenance_date.py  0005_rename_carmaintenance_carmaintenancehistory_and_more.py
car_maintenance/templates/car_maintenance/: car_delete_confirm.html  car_detail.html  car_form.html  car_list.html
car_maintenance/views/car/: create.py  delete.py  detail.py  list.py  update.py
medialibrary/: admin.py  apps.py  forms.py  models.py  urls.py  views.py  viewsss.py
medialibrary/migrations/: 0001_initial.py  0002_alter_book_published_date_alter_book_rating_and_more.py  0002_author_book_series_name_book_tom_and_more.py  0003_alter_book_author.py  0003_alter_book_rating.py  0004_alter_book_rating_alter_movie_rating_and_more.py  0004_rename_author_bookauthor.py  0005_alter_movie_rating.py  0006_alter_movie_director.py
medialibrary/templates/medialibrary/: book_delete_confirm.html  book_detail.html  book_form.html  (+10 more)
medialibrary/views/: mainpage.py
static/css/: styles.css
todo/: admin.py  forms.py  models.py  urls.py  views.py
todo/migrations/: 0001_initial.py  0002_alter_taskcategory_is_default.py
users/: apps.py  forms.py  models.py  signals.py  views.py
users/migrations/: 0001_initial.py  0002_profile_image.py
(+24 files in other folders)
